[tool.poetry]
name = "GraphRAG Examples"
version = "0.1.0"
description = "Plans a trip for you by asking you about your preferences"
authors = ["Shivam"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
unstructured = "0.10.25"
python-dotenv = "1.0.0"
langchain = "*"
langchain-community = "*"
sentence-transformers = "*"
langchain-experimental = "*"
neo4j = "*"
pypdf = "*"
langchain-openai = "*"
streamlit = "*"
langchain-groq = "^0.2.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"